-added content to the calculator -styled the calculator -made the calculator interactive

--- a/index.html
+++ b/index.html
@@ -4,8 +4,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Calculator</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="calculator">
+    <div class="top">
+      <div class="mirror"></div>
+      <div class="display-container">
+        <div class="display js-display"></div>
+      </div>
+    </div>
+    <div class="buttons-container">
+      <div class="row">
+        <button class="number js-number">7</button>
+        <button class="number js-number">8</button>
+        <button class="number js-number">9</button>
+        <button class="delete js-delete">Del</button>
+        <button class="clear js-clear">AC</button>
+      </div>
+      <div class="row">
+        <button class="number js-number">4</button>
+        <button class="number js-number">5</button>
+        <button class="number js-number">6</button>
+        <button class="operator js-operator">+</button>
+        <button class="operator js-operator">-</button>
+      </div>
+      <div class="row">
+        <button class="number js-number">1</button>
+        <button class="number js-number">2</button>
+        <button class="number js-number">3</button>
+        <button class="operator js-operator">
+          X
+        </button>
+        <button class="operator  js-operator">
+          /
+        </button>
+      </div>
+      <div class="row">
+        <button class="zero js-number number">0</button>
+        <button class="decimal js-decimal">.</button>
+        <button class="equal js-equal">=</button>
+      </div>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
