added a keyboard shortcut dialogue

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <p class="keyboard-shortcuts js-keyboard-shortcuts">Keyboard shortcuts</p>
   <div class="calculator">
     <div class="top">
       <div class="mirror"></div>
@@ -47,6 +48,33 @@
       </div>
     </div>
   </div>
+
+  <div class="keyboard-dialogue js-keyboard-dialogue">
+    <div class="key-match">
+      <p class="title">Calculator</p>
+      <p class="title">Keyboard</p>
+      <p>0 - 9</p>
+      <p>0 - 9</p>
+      <p>decimal point</p>
+      <p>.</p>
+      <p>del (delete)</p>
+      <p>Backspace</p>
+      <p>AC (Clear All)</p>
+      <p>Delete</p>
+      <p>+ (Plus)</p>
+      <p>Shift + =</p>
+      <p>- (Minus)</p>
+      <p>-</p>
+      <p>X (Multiply)</p>
+      <p>Shift + 8</p>
+      <p>/ (Divide)</p> 
+      <p>/</p>
+      <p>= (Equals)</p>
+      <p>Enter / =</p>
+    </div>
+    <button class="js-ok-button">OK</button>
+  </div>
+  <div class="dialogue-overlay js-dialogue-overlay"></div>
   <script src="script.js"></script>
 </body>
 </html>
